tests/good/typing/039-higher-order-app-type-2.clap
type applied <f, x> = x <f>
