tests/bad/lexical/004-second-project-type.clap
type snd <a, b> = b a

